traversal.snake.Snake.scala.error
Compilation error:
Snake:37: error: reassignment to val
  if(getDirection = Direction.EST){
                  ^